minor fixes to profile screen:- - Update Name fields icon - Align sign out button to center in profile screen - Add version number to profile screen

--- a/packages/donor/src/screens/myProfile/MyProfileScreen.module.scss
+++ b/packages/donor/src/screens/myProfile/MyProfileScreen.module.scss
@@ -46,3 +46,14 @@
 .cardContentMerge > * {
   padding-left: 5px;
 }
+
+.signOutButton {
+  margin-top: var(--layout-distance-small);
+}
+
+.appVersion {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: var(--color-mid-grey);
+}
